--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" type="text/css" href="ass.2_stylesheet.css">
     <meta charset="UTF-8">
     <title>4 Uno Rules You're Playing Wrong</title>
     <!-- Add link to two style sheets here. -->
