--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" type="text/css" href="ass.2_stylesheet.css">
     <meta charset="UTF-8">
     <title>4 Uno Rules You're Playing Wrong</title>
-    <!-- Add link to two style sheets here. -->
+    <link rel="stylesheet" type="text/css" href="css/ass.2_css_stylesheet.css">
   </head>
   <body>
     <header>
