--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>4 Uno Rules You're Playing Wrong</title>
-    <link rel="stylesheet" type="text/css" href="Homework2/css/ass.2_css_stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="css/ass.2_css_stylesheet.css">
   </head>
   <body>
     <header>
